Added all jQuery and CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <script src="jquery.js"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
+    <ul id="employees">
+    </ul>
+    <button id="start">
+      Start
+    </button>
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Rating</th>
+      <th>Salary</th>
+      <th>Bonus</th>
+      <th>Total</th>
+    </tr>
+    <tbody id = "boxes">
+  </tbody>
+  </table>
+  <img src="./club-penguin-breakdance.gif"/>
   </body>
 </html>
